Finished Front-End

--- a/src/crudMED/crud_MED.html
+++ b/src/crudMED/crud_MED.html
@@ -124,7 +124,7 @@
             <td>AÇÃO</td>
           </tr>
           <tr>
-            <td class="td-main"><input type="text" id="CpfInput"></td>
+            <td class="td-main"><input type="text" id="CpfInput" maxlength="15"></td>
             <td class="td-main"><input type="text" id="NameInput"></td>
             <td class="td-main"><input type="date" id="DataInput"></td>
             <td class="td-main"><input type="text" id="EspecialidadeInput"></td>
