--- a/src/consultsPages/dados_User/dados_User.html
+++ b/src/consultsPages/dados_User/dados_User.html
@@ -109,7 +109,8 @@
                 <option value="">Selecione:</option>
                 <option value="">Amigo(a)</option>
                 <option value="">Parente(a)</option>
-                <option value="">Filho(a)</option></select
+                <option value="">Filho(a)</option>
+                <option value="">Proprio(a)</option></select
               ><br />
               <label for="">Nome do paciente:</label><br />
               <input type="text" id="Nome" placeholder="Digite o nome do paciente:" /><br />
