--- a/src/consultsPages/horario_User/horarios_User.html
+++ b/src/consultsPages/horario_User/horarios_User.html
@@ -120,7 +120,7 @@
         </div>
         <form id="form-date">
           <input type="date" id="DateInput" />
-          <input type="submit" value="Enviar" onclick="Confirmation()" />
+          <input type="submit" value="Enviar" id="Enviar" onclick="Confirmation()" disabled />
         </form>
       </div>
     </div>
